--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 title: Thermostat Controller
-description: iPhone app to view and control your Venstar thermostat.
-url: https://thermostat-controller.studiojq.io/
-baseurl: /
+description: iPhone app to view and control your Venstar thermostat locally.
 author:
   name: STUDIOJQ
   url: https://github.com/thestudiojq
 github:
   repo: https://github.com/thestudiojq/thermostat-controller
-version: 2.1.0
-
+version: 0.1.0
+permalink: pretty
 markdown: kramdown
